--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script defer src="./js/script.js"></script>
     <title>PokeGallery</title>
 </head>
@@ -23,6 +26,10 @@
     <footer>
         <p>Copyright &copy; All Rights Reserved 2020 PokeGallery</p>
     </footer>
+    <!-- Modal UI -->
+    <div id="pokemodal" class="modal">
+    </div>
+      <!-- Modal UI -->
 </body>
 
 </html>
